Dev Express updated to 19.2.6 + Check added in reports to exclude deleted account addresses + migration added for Product Category relation Imported from Changeset 2357

--- a/WMS/Reports/Designs/InvoicePrint.resx
+++ b/WMS/Reports/Designs/InvoicePrint.resx
@@ -175,7 +175,7 @@ order by "ProductMaster".SKUCode</value>
   left
   join "dbo"."AccountAddresses" "AccountAddresses"
        on "AccountAddresses"."AccountID" = "Account"."AccountID" and "AccountAddresses"."AddressID" = (select top(1) "AddressID" from AccountAddresses 
-	 where AccountAddresses.AccountID = "Account"."AccountId" AND ("AddTypeBilling" = 1 or "AddTypeDefault" = 1))
+	 where AccountAddresses.AccountID = "Account"."AccountId" AND (AccountAddresses.IsDeleted = 0 OR AccountAddresses.IsDeleted is null) AND ("AddTypeBilling" = 1 or "AddTypeDefault" = 1))
   left
   join "dbo"."OrderNotes" "OrderNotes"
        on "OrderNotes"."OrderID" = "Orders"."OrderID"
