--- a/WMS/Reports/Designs/SalesOrderPrint.resx
+++ b/WMS/Reports/Designs/SalesOrderPrint.resx
@@ -160,7 +160,7 @@ FROM            Orders INNER JOIN
                          TenantLocations ON TenantLocations.WarehouseId = Orders.WarehouseId LEFT OUTER JOIN
                          TenantLocations AS TenantWarehouse ON Orders.TransferWarehouseId = TenantWarehouse.WarehouseId LEFT OUTER JOIN
                          SLAPriorits ON Orders.SLAPriorityId = SLAPriorits.SLAPriorityId LEFT OUTER JOIN
-                         AccountAddresses ON Accounts.AccountID = AccountAddresses.AccountID AND AccountAddresses.AddTypeDefault = 1 LEFT OUTER JOIN
+                         AccountAddresses ON Accounts.AccountID = AccountAddresses.AccountID AND AccountAddresses.AddTypeDefault = 1 AND (AccountAddresses.IsDeleted = 0 OR AccountAddresses.IsDeleted is null)  LEFT OUTER JOIN
                          JobTypes ON JobTypes.JobTypeId = Orders.JobTypeId LEFT OUTER JOIN
                          JobSubTypes ON JobSubTypes.JobSubTypeId = Orders.JobSubTypeId LEFT OUTER JOIN
                          PProperties ON PProperties.PPropertyId = Orders.PPropertyId LEFT OUTER JOIN
@@ -175,8 +175,9 @@ FROM            Orders INNER JOIN
                                WHERE        (OrderId = Orders.OrderID) AND (Status = 0) AND (IsCanceled = 0)
                                ORDER BY StartTime DESC) LEFT OUTER JOIN
                          Resources ON Resources.ResourceId = Appointments.ResourceId 
-WHERE ("Orders"."OrderId" = @SqlParamOrderId)
-and(orders.IsDeleted=0 or orders.IsDeleted is null)</value>
+WHERE ("Orders"."OrderId" = 24083)
+and(orders.IsDeleted=0 or orders.IsDeleted is null)
+</value>
   </data>
   <data name="customSqlQuery2.Sql" xml:space="preserve">
     <value>SELECT        OrderDetails.OrderDetailID, OrderDetails.OrderID, OrderDetails.WarehouseId, OrderDetails.ProductId, OrderDetails.ProdAccCodeID, OrderDetails.Qty, OrderDetails.Price, OrderDetails.WarrantyID,
