--- a/WMS/Reports/Designs/PurchaseOrderPrint.resx
+++ b/WMS/Reports/Designs/PurchaseOrderPrint.resx
@@ -157,7 +157,7 @@ FROM            Orders INNER JOIN
                          TenantLocations ON TenantLocations.WarehouseId = Orders.WarehouseId LEFT OUTER JOIN
                          TenantLocations AS TenantWarehouse ON Orders.TransferWarehouseId = TenantWarehouse.WarehouseId LEFT OUTER JOIN
                          SLAPriorits ON Orders.SLAPriorityId = SLAPriorits.SLAPriorityId LEFT OUTER JOIN
-                         AccountAddresses ON Accounts.AccountID = AccountAddresses.AccountID AND AccountAddresses.AddTypeDefault = 1 LEFT OUTER JOIN
+                         AccountAddresses ON Accounts.AccountID = AccountAddresses.AccountID AND AccountAddresses.AddTypeDefault = 1 AND (AccountAddresses.IsDeleted = 0 OR AccountAddresses.IsDeleted is null) LEFT OUTER JOIN
                          JobTypes ON JobTypes.JobTypeId = Orders.JobTypeId LEFT OUTER JOIN
                          JobSubTypes ON JobSubTypes.JobSubTypeId = Orders.JobSubTypeId LEFT OUTER JOIN
                          PProperties ON PProperties.PPropertyId = Orders.PPropertyId LEFT OUTER JOIN
@@ -173,8 +173,7 @@ FROM            Orders INNER JOIN
                                ORDER BY StartTime DESC) LEFT OUTER JOIN
                          Resources ON Resources.ResourceId = Appointments.ResourceId
  where ("Orders"."OrderId" = @SqlParamOrderId)
-and(orders.IsDeleted=0 or orders.IsDeleted is null)
-</value>
+and(orders.IsDeleted=0 or orders.IsDeleted is null)</value>
   </data>
   <data name="customSqlQuery2.Sql" xml:space="preserve">
     <value>SELECT        OrderDetails.OrderDetailID, OrderDetails.OrderID, OrderDetails.WarehouseId, OrderDetails.ProductId, OrderDetails.ProdAccCodeID, OrderDetails.Qty, OrderDetails.Price, OrderDetails.WarrantyID,
