--- a/WMS/Reports/Designs/TransferOrderPrint.resx
+++ b/WMS/Reports/Designs/TransferOrderPrint.resx
@@ -142,7 +142,7 @@
                          TenantWarehouse.AddressLine1 AS ToWarehouseAddr1, TenantWarehouse.AddressLine2 AS ToWarehouseAddr2, TenantWarehouse.AddressLine3 AS ToWarehouseAddr3, 
                          TenantWarehouse.CountyState AS ToWarehouseCounty, TenantWarehouse.PostalCode AS ToWarehousePostcode, ISNULL(Orders.ShipmentAddressLine1, '') AS ShipmentAddressLine1, ISNULL(Orders.ShipmentAddressLine2, 
                          '') AS ShipmentAddressLine2, ISNULL(Orders.ShipmentAddressLine3, '') AS ShipmentAddressLine3, ISNULL(Orders.ShipmentAddressLine4, '') AS ShipmentAddressLine4, ISNULL(Orders.ShipmentAddressPostcode, '') 
-                         AS ShipmentAddressPostcode, Orders.ShipmentAccountAddressId, Orders.ConsignmentTypeId, ISNULL(JobTypes.Name, '') + ': ' + ISNULL(JobSubTypes.Name, '') AS JobDescription, 
+                         AS ShipmentAddressPostcode, Orders.ShipmentAccountAddressId, Orders.DeliveryMethod, ISNULL(JobTypes.Name, '') + ': ' + ISNULL(JobSubTypes.Name, '') AS JobDescription, 
                          PProperties.AddressLine1 AS WorksPropertyAddress1, PProperties.AddressLine2 AS WorksPropertyAddress2, PProperties.AddressLine3 AS WorksPropertyAddress3, PProperties.AddressPostcode AS WorksPropertyPostcode, 
                          PTenants.TenantFullName AS WorksTenantFullName, PTenants.MobileNumber AS WorksTenantMobileNumber, PTenants.HomeTelephone AS WorksTenantHomePhone, PTenants.WorkTelephone1 AS WorksTenantWorkphone, 
                          Appointments.StartTime AS WorksStartTime, Appointments.EndTime AS WorksEndTime, Resources.FirstName + Resources.SurName AS WorksResourceName, PLandlords.LandlordFullname AS WorksLandlordName, 
